# ARLauncherProject

./: 100_PERCENT_COMPLETE.md  ARCHITECTURE.md  BUILD_CHECKLIST.md  BUILD_GUIDE_LINUX.md  BUILD_INSTRUCTIONS.md  CAMERA_FIXES.md  CHANGELOG.md  CMakeLists.txt  COMPLETION_CHECKLIST.md  COMPLETION_REPORT.md  COMPONENTS_API.md  CRITICAL_FIXES.md  DEPENDENCIES_SETUP.md  EXPLANATION_AND_FIXES.md  FILES_MAP.md  FINAL_STATUS.md  FIXES_APPLIED.md  FIXES_SUMMARY.md  FREETYPE_INTEGRATION.md  IMPROVEMENTS_LOG.md  INTEGRATION_GUIDE.md  LENSENGINE_INTEGRATION_FIX.md  LIBRARIES_SUMMARY.md  NEXT_STEPS.md  PROJECT_STRUCTURE.md  QUICK_BUILD.md  QUICK_START.md  README.md  REFACTORING_REPORT.md  SUMMARY.md  TECHNICAL_DETAILS.md  build_all.sh  build_linux.sh
ARLauncher/: AR_SETUP.md  CMakeLists.txt  IMPLEMENTATION_STATUS.md  LAUNCH_INSTRUCTIONS.md  Makefile  OPENGL_MIGRATION.md  README.md  WHAT_IS_DISPLAYED.md  cmake_install.cmake
ARLauncher/.qt/: QtDeploySupport.cmake
ARLauncher/ARLauncher/: Makefile  cmake_install.cmake
ARLauncher/LensEngineSDK/: Makefile  cmake_install.cmake
ARLauncher/examples/: demo_scene.cpp
ARLauncher/include/: ARLauncher.h  ARLauncherAPI.h  Application.h  Camera.h  FontRenderer.h  Renderer.h  Scene.h
ARLauncher/shaders/: basic.frag  basic.vert  glassmorphism.frag  glassmorphism.vert  ui.frag  ui.vert  video.frag  video.vert
ARLauncher/src/: ARLauncherAPI.cpp  Application.cpp  Camera.cpp  FontRenderer.cpp  Renderer.cpp  Scene.cpp  main.cpp
ARLauncher/ui/: Button.cpp  Button.h  Input.cpp  Input.h  Style.h  Text.cpp  Text.h  UIElement.cpp  UIElement.h  UIRenderer.cpp  UIRenderer.h  Widget.cpp  Widget.h  Window.cpp  Window.h
LensEngineSDK/: CMakeLists.txt  PROGRESS.md  README.md
LensEngineSDK/examples/: example_usage.cpp
LensEngineSDK/include/: ARDataProcessor.h  CameraController.h  LensEngine.h  LensEngineAPI.h  LensEngineTypes.h  Lidar3DProcessor.h  SensorFusionEKF.h  SpatialMappingSystem.h
LensEngineSDK/src/: ARDataProcessor.cpp  CameraController.cpp  LensEngine.cpp  LensEngineAPI.cpp  Lidar3DProcessor.cpp  SensorFusionEKF.cpp  SpatialMappingSystem.cpp
SensorConnector/: Makefile  README.md  SensorConnector.pro
SensorConnector/examples/: example_usage.cpp  example_usage.pro
SensorConnector/include/: FFmpegDecoder.h  FastJPEGDecoder.h  NetworkConfigurator.h  NetworkServer.h  NetworkServerSimplified.h  SensorConnector.h  SensorDataTypes.h  TcpServer.h  TurboJPEGDecoder.h  UsbManager.h
SensorConnector/src/: FFmpegDecoder.cpp  FastJPEGDecoder.cpp  NetworkConfigurator.cpp  NetworkServer.cpp  NetworkServerSimplified.cpp  SensorConnector.cpp  TcpServer.cpp  TurboJPEGDecoder.cpp  UsbManager.cpp
examples/: full_integration_example.cpp
